--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="youtube-icon">
                 <img src="./icons/youtube.svg">
-                <span>YouTube <sup>KEnya </sup></span>
+                <span>YouTube <sup>KE </sup></span>
             </div>
             <div class="search">
                 <input type="text" placeholder="search">
